2.3/object/2/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: nginx-ssl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          subPath: nginx.conf
          name: nginx-conf
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx
